@@ -488,14 +488,15 @@ BEGIN
     EDITTEXT        IDC_PARENTPROCESS,65,165,161,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "DEP:",IDC_STATIC,13,183,16,8
     EDITTEXT        IDC_DEP,65,181,161,12,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "Protection:",IDC_STATIC,13,198,36,8
-    EDITTEXT        IDC_PROTECTION,65,197,161,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Protected:",IDC_STATIC,13,200,35,8
     LTEXT           "Process Type:",IDC_PROCESSTYPELABEL,13,219,46,8,NOT WS_VISIBLE
     LTEXT           "32-bit",IDC_PROCESSTYPETEXT,67,219,20,8,NOT WS_VISIBLE
-    PUSHBUTTON      "Edit",IDC_EDITPROTECTION,230,195,17,15,BS_BITMAP | WS_DISABLED
     PUSHBUTTON      "Edit",IDC_EDITDEP,230,179,17,15,BS_BITMAP | WS_DISABLED
     PUSHBUTTON      "View",IDC_VIEWPARENTPROCESS,230,163,17,15,BS_BITMAP
     PUSHBUTTON      "Open",IDC_OPENFILENAME,230,64,17,15,BS_BITMAP
+    LTEXT           "Yes?",IDC_PROTECTION,55,200,24,8
+    LTEXT           "ASLR:",IDC_ASLRLABEL,91,200,20,8
+    EDITTEXT        IDC_ASLR,116,199,131,12,ES_AUTOHSCROLL | ES_READONLY
 END
 
 IDD_PROCMODULES DIALOGEX 0, 0, 260, 260
